--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.0"
   },
