--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ 
+{
   "name": "todaystory",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +12,7 @@
     "i18next": "^23.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-i18next": "^14.0.5",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.21.3",
