--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "axios": "^1.6.5",
     "html-entities": "^2.5.2",
     "i18next": "^23.9.0",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-i18next": "^14.0.5",
+    "react-instagram-embed": "^3.0.0",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
