feat: Swiper 적용, EditorsPick 이미지 색상 추출 기능 테스트

--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "axios": "^1.6.5",
     "html-entities": "^2.5.2",
     "i18next": "^23.9.0",
-    "querystring": "^0.2.1",
+    "node-vibrant": "^3.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-i18next": "^14.0.5",
-    "react-instagram-embed": "^3.0.0",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "styled-components": "^6.1.8",
+    "swiper": "^11.0.7",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build_ko": "set \"BUILD_PATH=.\\build\\ko\" && react-scripts build",
-    "build_en": "set \"BUILD_PATH=.\\build\\en\" && react-scripts build",
-    "build_ja": "set \"BUILD_PATH=.\\build\\ja\" && react-scripts build",
+    "build_ko": "set \"BUILD_PATH=.\\build\\ko_v2\" && react-scripts build",
+    "build_en": "set \"BUILD_PATH=.\\build\\en_v2\" && react-scripts build",
+    "build_ja": "set \"BUILD_PATH=.\\build\\ja_v2\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
