--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-helmet-async": "^2.0.4",
     "react-i18next": "^14.0.5",
     "react-loading-skeleton": "^3.4.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
